--- a/css/index.css
+++ b/css/index.css
@@ -41,7 +41,7 @@ body {
   height: 0;
   left: 50px;
   position: absolute;
-  top: 31px;
+  top: 32px;
   transform: rotateY(180deg);
   width: 0;
 }
@@ -162,6 +162,9 @@ body {
   }
   .main header h4 {
     font-size: 20px;
+  }
+  .main header .bubble-arrow {
+    top: 31px;
   }
 
   .content {
